--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+    padding-top: 70px !important;
+}
+.cursor-pointer {
+    cursor: pointer !important;
+  }
+  /* You can add global styles to this file, and also import other style files */
